--- a/src/main.css
+++ b/src/main.css
@@ -2,29 +2,5 @@
 
 /* styles applying on all sites */
 :root {
-    font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-}
-
-/* style for the navigation bar */
-nav {
-    position: fixed;
-    justify-content: center;
-    top: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    padding: 20;
-    color: white;
-    width: 100%;
-    background: #111;
-}
-
-nav ul{
-    list-style: none;
-    display: flex;
-    max-width: 1200;
-}
-
-nav ul li:last-of-type{
-    margin-left: auto;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
