--- a/src/main.css
+++ b/src/main.css
@@ -4,3 +4,11 @@
 :root {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+body {
+    display: grid;
+    margin-left: 10%;
+    max-width: 960px;
+    width: 100%;
+    background-color:;
+}
