designing navbar and background of home page

--- a/src/main.css
+++ b/src/main.css
@@ -7,8 +7,7 @@
 
 body {
     display: grid;
-    margin-left: 10%;
-    max-width: 960px;
+    margin: auto;
+    max-width: 1200px;
     width: 100%;
-    background-color:;
 }
