--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,8 @@
 /* styles applying on all sites */
 :root {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -25,4 +27,11 @@ button {
 a{
     text-decoration: none;
     color: black;
+}
+
+ul {
+    list-style: none;
+    font-size: 1.3em;
+    line-height: 1.4em;
+    padding-left: 0;
 }
