--- a/src/main.css
+++ b/src/main.css
@@ -11,9 +11,17 @@
 }
 
 main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 40px 0px;
+}
+
+/*
+main{
     display: grid;
     grid-template-columns: repeat(1fr 3fr);
-}
+}*/
 
 button {
     border: 0;
