--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,12 @@
 /* styles applying on all sites */
 :root {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    --main-button-color: rgb(99,143,157);
+    --hover-button-color: rgb(130, 165, 177);
+    --light-text-color: rgb(249, 248, 248);
+    --dark-text-color: rgb(50, 50, 50);
+    --hover-text-color: rgb(216, 213, 158);
+    --box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 *{
@@ -23,22 +29,23 @@ main{
     grid-template-columns: repeat(1fr 3fr);
 }*/
 
-button {
+button{
     border: 0;
     padding: 0.7em 1em;
     margin: 5em 0.5em 1em 0em; /* top right bottom left */
     border-radius: 5px; 
-    background-color: rgb(99,143,157);
-    color: snow;
+    background-color: var(--main-button-color);
+    color: var(--light-text-color);
 }
+
+a, p, h1, h2, h3{ color: var(--dark-text-color)}
 
 a{  
     font-size: 1em;
     text-decoration: none;
-    color: black;
 }
 
-ul {
+ul{
     list-style: none;
     font-size: 1.3em;
     line-height: 1.4em;
@@ -58,10 +65,6 @@ h2{
     font-size: 1rem;
     color: 1B1C1E;
     letter-spacing: 3px;
-}
-
-h3{
-
 }
 
 p {
